test/compile-fail/resolution/use/no-name-multi/expected.txt
error: unresolved item `c`
 --> top.rhdl:7:7
  |
7 | use a::c;
  |        ^ no `c` item in `a`
